--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<body>
-	<title>
+	<head>
+		<title>
+		
 		theintelligentinfo.github.io
-	</title>
+		</title>
+	</head>
+<body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
